<resources>
    <string name="app_name">Jobly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_pageName">Register Now</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="submit">Submit</string>
    <string name="login_pageName">Log In</string>
    <string name="logIn">Log In</string>
    <string name="menu_refresh">Pull to refresh</string>
    <string name="sign_out">Signout</string>
    <string name="setting">Setting</string>
    <string name="dipankar_debnath">Dipankar Debnath</string>
    <string name="skill">Add Skill</string>
    <string name="position">Enter Job Position</string>
    <string name="UpdateProfile">Update</string>
    <string name="desc">I need a android developer for my personal project</string>
    <string name="changePass">Change Password</string>
    <string-array name="userTypeArray">
        <item>Select</item>
        <item>Client</item>
        <item>Employee</item>
    </string-array>
    <string-array name="postCatagory">
        <item>Select a post Catagory</item>
        <item>Client</item>
        <item>Employee</item>
    </string-array>
    <string-array name="postSubCatagory">
        <item>Select a post SubCatagory</item>
        <item>Client</item>
        <item>Employee</item>
    </string-array>
    <string-array name="postservicetype">
        <item>Select a post SubCatagory</item>
        <item>Client</item>
        <item>Employee</item>
    </string-array>
</resources>