<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".accountlog.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/pb_reg_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/tv_reg_name_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:src="@drawable/ic_txtregister"
                android:text="@string/register_pageName"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_reg_email_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/et_account"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black_hint"
                app:layout_constraintTop_toBottomOf="@+id/tv_reg_name_id"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/et_reg_pass_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/et_account"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black_hint"
                app:layout_constraintTop_toBottomOf="@+id/et_reg_email_id"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/et_reg_fname_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/et_account"
                android:ems="10"
                android:hint="@string/fName"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_reg_pass_id" />

            <EditText
                android:id="@+id/et_reg_lName_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/et_account"
                android:ems="10"
                android:hint="@string/lName"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black_hint"
                app:layout_constraintTop_toBottomOf="@+id/et_reg_fname_id"
                tools:layout_editor_absoluteX="3dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_reg_lName_id" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/am_et_Reg_skill_createPost_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/et_account"
                android:hint="@string/skill"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_uploadAttachment_id" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_reg_skillView_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sp_position_createPost_id"
                tools:listitem="@layout/skillitemview" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_reg_submit_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/et_account"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>