<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".accountlog.LogInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <ImageView
            android:id="@+id/tv_reg_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/ic_txtlogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_log_email_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/tv_rectangle"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_reg_name_id"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/et_log_pass_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/tv_rectangle"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/et_log_email_id"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_submit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_black_round"
            android:text="@string/logIn"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_log_pass_id" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>